--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ PORT = 4002
 MONGOBD_PASSWORD = GOs2zZch2bYNJlcP
 MONGODB_URI = mongodb+srv://gusain07chetna:GOs2zZch2bYNJlcP@chatapp.kk8f3.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=ChatApp
 JWT_TOKEN = 7i838CK+VMdQiM/zySQvuI0sw0RjbXbMBQN/27YcRWk=
+NODE_ENV = "production"
